# dummy

./: README.md
pipenv_test/: Makefile  README.md  get_pipenv.sh  remove_pipenv.sh
poetry_test/: Makefile  README.md  get_poetryenv.sh  pyproject.toml  test.py
virtualenv_test/: .gitignore  Makefile  README.md  get_virtualenv.sh  remove_virtualenv.sh  requirements.txt  test.py
