[tool.poetry]
name = "poetry_test"
version = "0.1.0"
description = "Testing the poetry-environment set-up."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
