[tool.poetry]
name = "poetry_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
black = "^20.8b1"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
